src/test/deca/codegen/valid/our_tests/thomas-classMethods1.deca
class A {

    void hello() {
        println("hello");
    }

}

{

    A a = new A();

    a.hello();

}
