src/test/deca/codegen/invalid/our_tests/thomas-div0.deca
{
    float a = 0;
    float b = 0;
    print(a/b);
}